# Face_happy_Sad_Classification

./: HappySad.ipynb  README.md  app.py  pyproject.toml
logs/train/: events.out.tfevents.1776628751.MOHAMMADREZA.26152.0.v2  events.out.tfevents.1776628880.MOHAMMADREZA.26152.1.v2  events.out.tfevents.1776628945.MOHAMMADREZA.26152.2.v2
logs/validation/: events.out.tfevents.1776628947.MOHAMMADREZA.26152.3.v2
